@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.3.2 (pending)
 ==========================
 
+- Configurable block render mode for displaying event ports inline
 - Save state for debug graphics (connection points & bounding boxes)
 
 Release 0.3.1 (2016-03-06)
